# drf-production-ready

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  pyproject.toml
{{cookiecutter.project_name}}/config/: urls.py
{{cookiecutter.project_name}}/config/settings/: base.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/utils/: apps.py  mixins.py
